--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "adb kill-server & adb start-server && expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
